# shinemonitor-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: shinemonitor.yml
src/: client.rs  lib.rs
src/response/: auth.rs  mod.rs  pid.rs  ping.rs  plant.rs  solar.rs
