[package]
name = "shinemonitor"
version = "0.1.2"
edition = "2021"
authors = ["fnxln <lin@fnxln.com>"]
description = "Rust library for the shinemonitor.com website"
repository = "https://github.com/fnxln/shinemonitor-rs"
keywords = ["api","solar","iot"]
documentation = "https://docs.rs/shinemonitor"
license = "MIT"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
rust-crypto = "^0.2"
[dev-dependencies]
tokio-test = "0.4.2"
dotenv = "0.15.0"